fix/bugs (#33)
* feat: Add project info to carousel

* style: Style carousel component

* refactor: Implement method scrollToTop

* chore: Import laptop image in assets

* fix: Update laptop image import

* feat: Add hero-bg-img to variables

* style: Hide scrollbar

* style: Update font sizes

* style: Style components

* refactor: Restructure component

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -1,12 +1,21 @@
 .carousel {
   overflow-x: hidden;
-  margin-top: 1.5rem;
+
+  @media screen and (min-width: $screen-min-medium) and (max-width: $screen-max-medium) {
+    margin: 0 auto;
+    // overflow-x: hidden;
+    width: $width-3quarters
+  }
+
+  &:first-child {
+    height: 100%;
+  }
   
   &__main {
     align-items: center;
     justify-content: center;
     display: flex;
-    width: 100dvw;
+    width: $width-full;
   }
 
   &__card {
@@ -14,17 +23,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1.25rem;
+    gap: $medium;
+    position: relative;
     width: max-content;
 
-    @media screen and (min-width: 768px) and (max-width: 1023px) {
-      height: 55dvh;
-      width: auto;
+    @media screen and (min-width: $screen-min-medium) and (max-width: $screen-max-medium) {
+      
     }
-
-    @media screen and (min-width: 1024px) {
-      flex-direction: row;
-      width: 60dvw;
+    
+    @media screen and (min-width: $screen-large) {
+      width: $width-half;
     }
 
     &--content {
@@ -32,47 +40,59 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 1rem;
+      gap: $small;
+      padding: 0 $large;
     }    
 
+    &--top {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      width: 90%;
+    }
+
+    &--title {
+      margin: 0 auto;
+      transform: translateX(12.5%);
+    }
+
     &--image {
-      width: 55dvw;
+      width: $width-half;
 
-      @media screen and (min-width: 768px) and (max-width: 1023px) {
-        height: 55dvh;
-        width: auto;
-      }
-
-      @media screen and (min-width: 1024px) {
-        height: 70dvh;
+      @media screen and (min-width: $screen-min-medium)  {
+        height: $height-half;
         width: auto;
       }
     }
 
     &--links-container {
       display: flex;
+      font-size: 0.75rem;
       gap: 1rem;
     }
 
     &--description {
       font-size: 0.75rem;
-      margin: 0 2rem;
     }
 
     &--topics {
       align-items: center;
       display: flex;
       flex-wrap: wrap;
-      gap: 1rem;
+      gap: $small;
       justify-content: center;
-      margin: 0 2rem;
+      margin: 0 $large;
   
       li {
         background-color: dimgray;
         border-radius: 50px;
-        font-size: 0.75rem;
-        padding: 0.25rem 0.5rem;
+        font-size: $x-small;
+        padding: $xx-small $x-small;
       }
+    }
+
+    &--description {
+      font-size: calc($xx-small + $x-small);
     }
   }
 
@@ -81,11 +101,21 @@
     background-color: unset;
     display: flex;
     justify-content: space-between;
-    padding: 0 1.25rem;
+    left: 50%;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
+    transform: translateX(-50%);
+    width: calc($width-full - $x-large);
+    
+    @media screen and (min-width: $screen-min-medium) and (max-width: $screen-max-medium) {
+      top: 45%;
+      width: calc($width-full - (3 * $xx-large));
+    }
+
+    @media screen and (min-width: $screen-large) {
+      top: 55%;
+      width: calc($width-full - (5 * $xx-large));
+    }
 
     span {
       display: none;
